cmake_minimum_required(VERSION 3.24)
project(BEAKJOONH)

set(CMAKE_CXX_STANDARD 14)

add_executable(BEAKJOONH
        Algorithmns/Algorithmns/1012.c
        Algorithmns/Algorithmns/2178.c
        Algorithmns/Algorithmns/2606.c
        Algorithmns/Algorithmns/BFS.c
        Domitory_WV/10026.c
        Domitory_WV/1003.c
        Domitory_WV/10250.c
        Domitory_WV/1027.C
        Domitory_WV/10814.c
        Domitory_WV/10814_230221.c
        Domitory_WV/10816.c
        Domitory_WV/10845.c
        Domitory_WV/1085.c
        Domitory_WV/10866.c
        Domitory_WV/10989.c
        Domitory_WV/1138.c
        Domitory_WV/11399.c
        Domitory_WV/11650.c
        Domitory_WV/11651.c
        Domitory_WV/11723.c
        Domitory_WV/1181.c
        Domitory_WV/1259.c
        Domitory_WV/1436.c
        Domitory_WV/15829.c
        Domitory_WV/1620.c
        Domitory_WV/16236.c
        Domitory_WV/1629.c
        Domitory_WV/16926.c
        Domitory_WV/1697.c
        Domitory_WV/1764.c
        Domitory_WV/1780.c
        Domitory_WV/1920.c
        Domitory_WV/1966.c
        Domitory_WV/1992.c
        Domitory_WV/2164.c
        Domitory_WV/2178.c
        Domitory_WV/2292.c
        Domitory_WV/2630.c
        Domitory_WV/2775.c
        Domitory_WV/2839.c
        Domitory_WV/4153.c
        Domitory_WV/7569.c
        Domitory_WV/7576.c
        Domitory_WV/7662.c
        Domitory_WV/9095.c
        Domitory_WV/9461.c
        Domitory_WV/BFS_sample.c
        Domitory_WV/C_DataStructure_Queue.c Domitory_WV/1463.c Domitory_WV/11726.c Domitory_WV/1927.c Domitory_WV/18870.c Domitory_WV/11724.c Domitory_WV/1074.c Domitory_WV/11279.c Domitory_WV/1124.c Domitory_WV/20191.c Domitory_WV/11402.c Domitory_WV/3783.c Domitory_WV/1058.c Domitory_WV/15488.c Domitory_WV/2588.c Domitory_WV/2193.c Domitory_WV/14501.c Domitory_WV/1002.c Domitory_WV/24389.c Domitory_WV/24396.c Domitory_WV/24391.c Domitory_WV/24390.c Domitory_WV/24395.c Domitory_WV/24392.c Domitory_WV/4963.c Domitory_WV/10171.c Domitory_WV/2667.c Domitory_WV/2644.c Domitory_WV/11053.c Domitory_WV/5014.c Domitory_WV/11052.c)
