cmake_minimum_required(VERSION 3.24)
project(BEAKJOONH)

set(CMAKE_CXX_STANDARD 14)

add_executable(BEAKJOONH

        Domitory_WV/10026.c
        Domitory_WV/1003.c
        Domitory_WV/10250.c
        Domitory_WV/1027.C
        Domitory_WV/10814.c
        Domitory_WV/10814_230221.c
        Domitory_WV/10816.c
        Domitory_WV/10845.c
        Domitory_WV/1085.c
        Domitory_WV/10866.c
        Domitory_WV/10989.c
        Domitory_WV/1138.c
        Domitory_WV/11399.c
        Domitory_WV/11650.c
        Domitory_WV/11651.c
        Domitory_WV/11723.c
        Domitory_WV/1181.c
        Domitory_WV/1259.c
        Domitory_WV/1436.c
        Domitory_WV/15829.c
        Domitory_WV/1620.c
        Domitory_WV/16236.c
        Domitory_WV/1629.c
        Domitory_WV/16926.c
        Domitory_WV/1697.c
        Domitory_WV/1764.c
        Domitory_WV/1780.c
        Domitory_WV/1920.c
        Domitory_WV/1966.c
        Domitory_WV/1992.c
        Domitory_WV/2164.c
        Domitory_WV/2178.c
        Domitory_WV/2292.c
        Domitory_WV/2630.c
        Domitory_WV/2775.c
        Domitory_WV/2839.c
        Domitory_WV/4153.c
        Domitory_WV/7569.c
        Domitory_WV/7576.c
        Domitory_WV/7662.c
        Domitory_WV/9095.c
        Domitory_WV/9461.c
        Domitory_WV/BFS_sample.c
        Domitory_WV/Algorithmns/heap.c Domitory_WV/18258.c Domitory_WV/1527.c Domitory_WV/1527.c Domitory_WV/2748.c Domitory_WV/7662_multiset.cpp Domitory_WV/5525.c Domitory_WV/6064.c Domitory_WV/11403.c Domitory_WV/10172.c Domitory_WV/1008.c Domitory_WV/14500.c Domitory_WV/6881.c Domitory_WV/1094.c Domitory_WV/1343.c Domitory_WV/11444.c Domitory_WV/11660.c Domitory_WV/16953.c Domitory_WV/1753.c Domitory_WV/2167.c Domitory_WV/2407.c Domitory_WV/1789.c Domitory_WV/DS_practice1.c Domitory_WV/10926.c)